# spirrow-lexora

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
config/: lexora_config.yaml
deploy/: environment.example  lexora.service
docs/: DESIGN.md
src/lexora/: __init__.py  config.py  main.py
src/lexora/api/: __init__.py  models.py  routes.py
src/lexora/backends/: __init__.py  anthropic.py  base.py  claude_code.py  factory.py  openai_compatible.py  vllm.py
src/lexora/services/: __init__.py  cost_tracker.py  fallback.py  metrics.py  model_registry.py  queue.py  rate_limiter.py  retry_handler.py  router.py  stats.py  task_classifier.py
src/lexora/utils/: __init__.py  logging.py
tests/: __init__.py  test_config.py
tests/api/: test_routes.py  test_routes_capabilities.py  test_routes_convenience.py
tests/backends/: __init__.py  test_anthropic.py  test_factory.py  test_openai_compatible.py  test_vllm.py
tests/services/: test_fallback.py  test_metrics.py  test_model_registry.py  test_queue.py  test_rate_limiter.py  test_retry_handler.py  test_retry_handler_rate_limit.py  test_router.py  test_stats.py  test_task_classifier.py
